# SEA-ME-Head-Unit

./: AppWidget.qml  CMakeLists.txt  GearWidget.qml  Homepage.qml  ModeWidget.qml  MusicWidget.qml  README.md  TopInfo.qml  WeatherApplication.qml  YoutubeApplication.qml  YoutubeWidget.qml  imageExtractor.cpp  imageExtractor.h  main.cpp  mapcontroller.cpp  qemu.yml  usbscanner.cpp  usbscanner.h  weather.cpp  weather.h  youtubeController.cpp  youtubeController.h
.github/workflows/: yocto-qemu.yml
IC_team5/yocto/: README.md
IC_team5/yocto/meta-splash/recipes-core/files/: getty@tty1.service
IC_team5/yocto/meta-team5/conf/: layer.conf
IC_team5/yocto/meta-team5/recipes-core/images/: instrument-cluster-image.bbappend
IC_team5/yocto/meta-ui/recipes-core/: select.bb
IC_team5/yocto/meta-ui/recipes-core/files/: select.sh
IC_team5/yocto/meta-ui/recipes-ic/: instrumentcluster.bb
IC_team5/yocto/meta-ui/recipes-ic/files/IC_someip/IC_someip/: CMakeLists.txt  ICStubImpl.cpp  ICStubImpl.h  Needle.qml  gear.cpp  gear.h  ic_interstubimpl.cpp  iclog.sh  main.cpp  main.qml  receiver.cpp  receiver.h
IC_team5/yocto/meta-wifi/recipes-connectivity/: wifi-connect-autoexec.bb
IC_team5/yocto/meta-wifi/recipes-connectivity/source/: eth0-static.service  route-i-wlan0.service  udhcpc-i-wlan0.service  wpa-supplicant-wlan0.service
qml/pages/: LightApplication.qml  Main.qml  MapApplication.qml  MapWidget.qml  ModeWidget.qml  MusicApplication.qml  MusicWidget.qml  TopInfo.qml  WeatherApplication.qml  WeatherWidget.qml  YoutubeApplication.qml  YoutubeWidget.qml
(+10 files in other folders)
